# bulletsim

./: .gitignore  CMakeLists.txt  GLDebugDrawer.cc  GLDebugDrawer.h  LICENSE  Makefile  README  README.md  Red  bulletscene.cc  make_eclipse_project.sh  manifest.xml  stack.xml  stack.yaml
lib/: CMakeLists.txt
lib/bullet-2.77/: CMakeLists.txt  Makefile.am  autogen.sh  bullet.pc.in  config.h.in  configure.ac  jenga.dae
lib/bullet-2.79/: CMakeLists.txt
lib/bullet-collada/: CMakeLists.txt
lib/haptics/: CMakeLists.txt  thread_socket_interface.cpp  thread_socket_interface.h
lib/hdfutil/: CMakeLists.txt  hdfutil.cpp  hdfutil.hpp
lib/log4cplus-1.1.0-rc3/: CMakeLists.txt  REVISION
lib/osgBullet-2.0/: CMakeLists.txt
lib/osgWorks-2.0/: CMakeLists.txt
lib/phasespace/: LICENSE  VERSION  calib  capture  demos  master  paint  ptcapture  rbcapture  record  scope2d  stream  tkcalib  wand.rb
lib/tetgen-1.4.3/: CMakeLists.txt  tetgen.cxx
perception/: CMakeLists.txt  apply_impulses.cpp  apply_impulses.h  bullet_io.cpp  bullet_io.h  calibrate_kinect.cpp  clouds  comm  comm.cpp  comm.h  config_perception.cpp  config_perception.h  config_tracking.h  custom_scene.h  dist_math.cpp  dist_math.h  geom.cpp  geom.h  get_focal_length.cpp  get_table.cpp  get_table.h  log_kinect_and_joints.py  make_bodies.cpp  make_bodies.h  matching.cpp  matching.h  matching_grb.cpp  model_creation_helpers.h  my_matrix.h  optimization_forces.cpp  optimization_forces.h  robot_geometry.cpp  robot_geometry.h  sparse_array.cpp  sparse_array.h  test_eigen.cpp  test_eigen_inc.cpp  test_get_table_full.cpp  test_json.cpp  test_kinect_rope.cpp  (+25 more)
perception/clouds/: CMakeLists.txt  cloud_filtering.cpp  cloud_filtering.h  comm_cv.h  comm_downsample_clouds.cpp  comm_get_region_centers.py  comm_get_table.cpp  comm_pcl.cpp  comm_write_pcds.cpp  correction.cpp  kinect_correction_identity.txt  pcd_picker.cpp  record_one_pcd.cpp  test_cloud_filtering.cpp  test_correction.cpp  test_utils.cpp  utils_cv.h
perception/comm/: CMakeLists.txt  comm2.cpp  comm2.h  comm_eigen.cpp  test_comm2.cpp
perception/pipeline_scripts/: Makefile  rope444  rope_offline
src/: CMakeLists.txt  CMakeLists.txt.orig  CameraModels.cpp  SetColorsVisitor.h  basescene.cpp  basescene.h  basicobjects.cpp  basicobjects.cpp.orig  basicobjects.h  bullet_typedefs.h  bulletscene.cpp  config.cpp  config.h  config_bullet.cpp  config_bullet.h  convexdecomp.cpp  convexdecomp.h  dist_math.cpp  dist_math.h  emptyscene.cpp  emptyscene.h  environment.cpp  environment.cpp.orig  environment.h  environment.h.orig  file_reading.h  grabbing.cpp  grabbing.h  newscene.cpp  openravecontrol.cpp  openravesupport.cpp  openravesupport.h  plotting.cpp  plotting.h  pr2.cpp  pr2.h  recording.cpp  recording.h  rope.cpp  rope.h  (+38 more)
src/bscp/: CMakeLists.txt
src/cloud_defs/: CMakeLists.txt  stack.yaml
src/clouds/: CMakeLists.txt  border_extraction_node.cpp  calibrated_table.cpp  calibrated_table.h  cloud_filtering.cpp  cloud_filtering.h  cloud_merger_node.cpp  cloud_ops.cpp  cloud_ops.h  cloud_test_node.cpp  clouds_fwd.h  comm_compressed_clouds.h  comm_cv.cpp  comm_cv.h  comm_downsample_clouds.cpp  comm_get_table.cpp  comm_pcl.cpp  comm_pcl.h  comm_rope_preproc.cpp  comm_towel_preproc.cpp  comm_write_pcds.cpp  correction.cpp  correction.h  define_boundary.cpp  filtering.cpp  filtering.h  geom.cpp  geom.h  get_chessboard_pose.cpp  get_chessboard_pose.h  get_focal_length.cpp  get_table.cpp  get_table.h  get_table2.cpp  get_table2.h  get_table_server.cpp  grabcut.cpp  grabcut.h  hist_plane_finding.cpp  hist_plane_finding.h  (+38 more)
src/comm/: CMakeLists.txt  comm.cpp  comm.h  comm2.cpp  comm2.h  comm_decompress_pcc.cpp  comm_eigen.cpp  comm_eigen.h  test_comm.cpp  test_comm2.cpp  test_eigen.cpp
src/demos/: CMakeLists.txt  cloth_actions.cpp
src/experiments/: CMakeLists.txt  message_conversions.cpp
src/flattening/: CMakeLists.txt  batch_genclouds.py  cloth.cpp  cloth.h  clothgrasping.cpp  clothgrasping.h  clothmanip.cpp  clothscene.cpp  clothscene.h  clothutil.cpp  clothutil.h  clothviewer.cpp  cloudutils.cpp  cloudutils.h  config_flattening.cpp  config_flattening.h  demo_flatten.cpp  demo_pr2_manip.cpp  edges.cpp  edges.h  facepicker.cpp  facepicker.h  folding.cpp  folding.h  force_cloth_to_obs.cpp  gen_rand_states.cpp  gencloud.cpp  genmanip.cpp  genmanip.h  graspingactions.cpp  graspingactions.h  graspingactions_impl.h  make_bodies.cpp  make_bodies.h  match_obs.cpp  nodeactions.cpp  nodeactions.h  nodepicker.cpp  nodepicker.h  pcd_xyzrgba_to_xyzrgb.cpp  (+10 more)
src/john_sandbox/: CMakeLists.txt  cloudptr_share.cpp  depth_image.cpp  fake_gripper.cpp  get_cloud_robot_frame.cpp  ik_benchmark.cpp  interp.cpp  kb_control.cpp  numerical_ik.cpp  pcl_mesh_tutorial.cpp  shadow_hand.env.xml  test_box_overlap.cpp  test_box_overlap.py  test_dynamic_pr2.cpp  test_grab.cpp  test_hydra_teleop.cpp  test_numerical_ik.cpp  test_openrave_derivatives.cpp  test_preproc.cpp  test_preproc2.cpp  test_python_rave.cpp  test_rave_load.cpp  test_recording.cpp  test_ros.cpp  test_shadow_hand.cpp  test_surface_sampling.cpp  try_config_vectors.cpp
src/knots/: CMakeLists.txt  arm_base_traj.cpp  arm_base_traj.h  execute_knot_tie.cpp  execute_knot_tie_telepathy.cpp  grabbing_scene.h  knots.cpp  knots.h  lookup_and_execute.cpp  numpy_boost.cpp  numpy_boost.hpp  record_demo_knot.cpp  record_knot_tie.cpp  rope_scenes.cpp  rope_scenes.h  trajectory_library.cpp  trajectory_library.h  utils_python.cpp  utils_python.h
src/lfd/: CMakeLists.txt  dynamics.cpp  dynamics.h  knots.h  lfd_python_wrapper.cpp  lfd_python_wrapper.h  lfd_rope.cpp  lfd_rope_common.cpp  lfd_rope_common.h  optimization_simple.cpp  optimization_simple.h  record_sim_tracking.cpp  registration.cpp  registration.h  rope_scenes.cpp  rope_scenes.h  ropescene.cpp  task_execution.cpp  task_execution.h  test_easy_scene.cpp  test_simpletrajoptimizer.cpp  utils_python.cpp  utils_python.h
src/ophys/: CMakeLists.txt  capsule.cpp  hermite_cubic.cpp  hermite_cubic.hpp  ipopt_interface.h  nlopt_rope.cpp  nlopt_spline_rope.cpp  ophys_common.h  ophys_config.cpp  optrope.cpp  (+27 more)
(+1735 files in other folders)
